[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Happy Lucky Free.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menuprincipal.gd" type="Script" id=2]
[ext_resource path="res://Assets/Main Menu Background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Logo.png" type="Texture" id=4]
[ext_resource path="res://Assets/martin_cancion_menu.mp3" type="AudioStream" id=5]

[sub_resource type="ImageTexture" id=6]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
outline_color = Color( 0.320313, 0.0613098, 0.0613098, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Start:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Options:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 28 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Quit:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 56 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Start:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Options:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 150 ), Vector2( 0, 28 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Quit:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.8, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, 79 ) ]
}

[node name="Menuprincipal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.12, 0.12 )
texture = SubResource( 6 )

[node name="MainMenuBackground" type="Sprite" parent="Sprite"]
position = Vector2( 4300, 2516.67 )
scale = Vector2( 4.53403, 4.71582 )
texture = ExtResource( 3 )

[node name="Logo" type="Sprite" parent="Sprite"]
position = Vector2( 1641.67, 966.667 )
scale = Vector2( 1.33333, 1.33333 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.00002
margin_top = -241.0
margin_right = 102.0
margin_bottom = -138.0
rect_scale = Vector2( 2.28, 2.28 )
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../Quit")
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 94.0
margin_bottom = 50.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Options"

[node name="About" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 94.0
margin_bottom = 76.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "About"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 94.0
margin_bottom = 78.0
focus_neighbour_bottom = NodePath("../Start")
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 4 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
